# OpenCLParallelRendering

./: CMakeLists.txt  Framework.odg  README.md  TaskCollect.cpp  TaskCollect.h  TaskComposite.cpp  TaskComposite.h  TaskRender.cpp  TaskRender.h  Transformation.h  VirtualExperiment.cpp  VirtualExperiment.h  VirtualFrameWork.cpp  VirtualFrameWork.h  VirtualGPU.cpp  VirtualGPU.h  VirtualImage.cpp  VirtualImage.h  VirtualNode.cpp  VirtualNode.h  VirtualVolume.cpp  VirtualVolume.h  clparen.sh  cmake.CMD  main.cpp  parallel-rendering-multi-gpu.pro  virtual-rendering-multi-gpu.pro
src/: CMakeLists.txt  CMakeLists.txt~
src/apps/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser_benchmark.h  RenderingWindow.cpp  RenderingWindow.h  RenderingWindow.ui  oclMGPUVR.cpp  oclMGPUVS.cpp  runscript.sh.in
src/apps/develop/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CommandLineParser_Benchmark.cpp  CommandLineParser_Benchmark.h  CommandLineParser_Virtual.cpp  CommandLineParser_Virtual.h  CommandLineParser_benchmark.cpp  RenderingWindow.cpp  RenderingWindow.h  RenderingWindow.ui  oclMGPUVR.cpp  oclMGPUVR_Benchmark.cpp  oclMGPUVR_Calibrate.cpp  oclMGPUVR_Virtual.cpp  oclMGPUVR_benchmark.cpp
src/apps/oclUSR/: CMakeLists.txt  ColorMapWidget.cpp  ColorMapWidget.h  CommandLineParser.cpp  CommandLineParser.h  CommandLineParser_Benchmark.h  CommandLineParser_SortFirst.cpp  CommandLineParser_SortFirst.h  HoverPoints.cpp  HoverPoints.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RenderingWindow.cpp  RenderingWindow.h  RenderingWindow.ui  TFWidget.cpp  TFWidget.h  TransferFunctionEditor.cpp  TransferFunctionEditor.h  TransferFunctionEditor.ui  Utilities.h  interface.cpp  oclUSR.cpp  oclUSRWindow.cpp  oclUSRWindow.h  oclUSRWindow.ui  oclUSR_Benchmark.cpp
src/apps/release/: CMakeLists.txt  CMakeLists.txt~  GPUListItemWidget.cpp  GPUListItemWidget.h  GPUListView.cpp  GPUListView.h  GpuIcons.qrc  MouseNavigator.cpp  MouseNavigator.h  QLabelMouseEvents.cpp  QLabelMouseEvents.h  RenderingWindow_Gui.cpp  RenderingWindow_Gui.cpp.autosave  RenderingWindow_Gui.h  RenderingWindow_Gui.h~  RenderingWindow_Gui.ui  TaskInitializeFramework.cpp  TaskInitializeFramework.h  oclMGPUVR_Gui.cpp
src/auxillary/: CMakeLists.txt  VolumeUtilities.h
src/common/: Headers.hh  Typedefs.hh
src/data/: BrickParameters.cpp  BrickParameters.h  BrickParameters.ipp  Image.cpp  Image.h  Image.ipp  TransferFunction.h  Transformation.h  Volume.cpp  Volume.h
src/framework/: CLAbstractCompositor.cpp  CLAbstractCompositor.h  CLAbstractRenderer.cpp  CLCompositor.cpp  CLCompositor.h  CLCompositor.ipp  CLCompositorAccumulate.cpp  CLCompositorAccumulate.h  CLCompositorAccumulate.ipp  CLContext.cpp  CLContext.h  CLContext.ipp  CLRenderer.cpp  CLRenderer.h  CLRenderer.ipp  CompositingNode.cpp  CompositingNode.h  ParallelRendering.cpp  ParallelRendering.h  RenderingNode.cpp  RenderingNode.h  TaskCalibrate.cpp  TaskCalibrate.h  TaskCollect.cpp  TaskCollect.h  TaskComposite.cpp  TaskComposite.h  TaskMakePixmap.cpp  TaskMakePixmap.h  TaskRender.cpp  TaskRender.h  Transformation.cpp  Transformation.h  clparen.h
src/framework/calibrators/: AbstractCalibrator.cpp  AbstractCalibrator.h  Calibrator.cpp  Calibrator.h  Calibrator.ipp  TaskCalibrate.cpp  TaskCalibrate.h
src/framework/compositors/: CLAbstractCompositor.cpp  CLAbstractCompositor.h  CLCompositor.cpp  CLCompositor.h  CLCompositor.ipp  CLCompositorAccumulate.cpp  CLCompositorAccumulate.h  CLCompositorAccumulate.ipp  TaskComposite.cpp  TaskComposite.h
src/framework/parallel/: CLAbstractParallelRenderer.cpp  CLAbstractParallelRenderer.h  ParallelRendering.cpp  ParallelRendering.h  SortFirstRenderer.cpp  SortFirstRenderer.h  SortFirstRenderer.ipp  SortLastRenderer.cpp  SortLastRenderer.h  SortLastRenderer.ipp  TaskCollect.cpp  TaskCollect.h  TaskMakePixmap.cpp  TaskMakePixmap.h
src/framework/renderers/: CLAbstractRenderer.cpp  CLAbstractRenderer.h  CLRenderer.cpp  CLRenderer.h  CLRenderer.ipp  TaskCalibrate.cpp  TaskCalibrate.h  TaskRender.cpp  TaskRender.h
src/framework/virtual/: VirtualCLCompositor.cpp  VirtualCLCompositor.h  VirtualCLCompositor.ipp  VirtualCLRenderer.cpp  VirtualCLRenderer.h  VirtualCLRenderer.ipp  VirtualCompositingNode.cpp  VirtualCompositingNode.h  VirtualParallelRendering.cpp  VirtualParallelRendering.h  VirtualRenderingNode.cpp  VirtualRenderingNode.h  VirtualTaskCollect.cpp  VirtualTaskCollect.h
src/geometry/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector3.ipp  Vector4.cpp  Vector4.h  Vector4.ipp
src/kernels/: averageIntensityProjection.cl  averageIntensityProjection_compositing.cl  isoSurface.cl  isoSurface_compositing.cl  maxIntensityProjection.cl  maxIntensityProjection_compositing.cl  minIntensityProjection.cl  minIntensityProjection_compositing.cl  shaded.cl  ultrasound.cl  volumeRender.cl  xray.cl  xray_compositing.cl
src/opencl/: CLBuffer.cpp  CLBuffer.h  CLBuffer.ipp  CLCompositingKernel.cpp  CLCompositingKernel.h  CLFrame.cpp  CLFrame.h  CLFrame.ipp  CLFrameVariants.hh  CLImage2D.cpp  CLImage2D.h  CLImage2D.ipp  CLImage2DArray.cpp  CLImage2DArray.h  CLImage2DArray.ipp  CLMaxIntensityProjectionCompositingKernel.cpp  CLMaxIntensityProjectionCompositingKernel.h  CLMaxIntensityProjectionRenderingKernel.cpp  CLMaxIntensityProjectionRenderingKernel.h  CLMinIntensityProjectionCompositingKernel.cpp  CLMinIntensityProjectionCompositingKernel.h  CLMinIntensityProjectionRenderingKernel.cpp  CLMinIntensityProjectionRenderingKernel.h  CLRenderingKernel.cpp  CLRenderingKernel.h  CLRewindFrameKernel.h  CLTransferFunction.cpp  CLTransferFunction.h  CLVolume.cpp  CLVolume.h  CLVolumeVariants.hh  CLXRayCompositingKernel.cpp  CLXRayCompositingKernel.h  CLXRayRenderingKernel.cpp  CLXRayRenderingKernel.h
src/opencl/cldata/: CLBuffer.cpp  CLBuffer.h  CLBuffer.ipp  CLFrame.cpp  CLFrame.h  CLFrame.ipp  CLFrameVariants.hh  CLImage2D.cpp  CLImage2D.h  CLImage2D.ipp  CLVolume.cpp  (+9 more)
src/profiling/: Profiles.hh  ProfilingExterns.cpp  ProfilingExterns.h
src/system/: Colors.hh  LogLevel.hh  Logger.h  Utilities.cpp  Utilities.h  oclUtils.h
(+143 files in other folders)
